# onshape-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
onshape_mcp/: client.py  mcp_instance.py  server.py
onshape_mcp/tools/: assemblies.py  configurations.py  documents.py  drawings.py  import_export.py  metadata.py  part_studios.py  readme.py
