[project]
name = "onshape-mcp"
version = "0.1.0"
description = "MCP server for the Onshape CAD API — documents, part studios, assemblies, drawings, import/export, and more"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
onshape-mcp = "onshape_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
